--- a/basics.html
+++ b/basics.html
@@ -5,10 +5,21 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 </head>
 <body>
-<h1>Bootstrap Basics</h1>
-<button class="btn btn-success btn-xs">CLICK ME!</button>
-<button class="btn btn-success btn-xs" disabled="disabled">CLICK ME!</button>
-<button class="btn btn-success btn-xs active">CLICK ME!</button>
-<a href="http://www.getbootstrap.com" class="btn btn-info btn-lg">Bootstrap Docs</a>
+
+
+<div class="container">
+	<div class="jumbotron">
+		<h1>This is a jumbotron</h1>
+		<p>asdfk asldkj alk alskj lksd flk alskdj flj </p>
+		<button class="btn btn-success btn-lg">Hi there</button>
+	</div>
+
+	<h1>Bootstrap Basics</h1>
+	<button class="btn btn-success btn-xs">CLICK ME!</button>
+	<button class="btn btn-success btn-xs" disabled="disabled">CLICK ME!</button>
+	<button class="btn btn-success btn-xs active">CLICK ME!</button>
+	<a href="http://www.getbootstrap.com" class="btn btn-info btn-lg">Bootstrap Docs</a>
+
+</div>
 </body>
 </html>
