--- a/grid.html
+++ b/grid.html
@@ -7,6 +7,12 @@
 	<style type="text/css">
 		.pink {
 			background: pink;
+			border: 1px solid purple;
+		}
+		.orange {
+			background: orange;
+			border: 1px dashed red;
+			height: 50px;
 		}
 	</style>
 </head>
@@ -18,24 +24,39 @@
 <!-- Write Nested Grids -->
 
 <div class="container">
+<!-- 	<div class="row">
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+		<div class="col-lg-1 col-md-2 pink">COL LG 1</div>
+	</div> -->
 	<div class="row">
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-		<div class="col-lg-1 pink">COL LG 1</div>
-	</div>
-	<div class="row">
-		<div class="col-lg-4 pink">COL LG 4</div>
-		<div class="col-lg-4 pink">COL LG 4</div>
-		<div class="col-lg-4 pink">COL LG 4</div>
+		<div class="col-md-3 col-sm-6 pink">
+			<div class="row">
+				<div class="col-lg-6 orange">First Half</div>
+				<div class="col-lg-6 orange">Other Half</div>
+			</div>
+		</div>
+		<div class="col-md-3 col-sm-6 pink">Tour Date</div>
+		<div class="col-md-3 col-sm-6 pink">Tour Date</div>
+		<div class="col-md-3 col-sm-6 pink">
+			<div class="row">
+				<div class="col-lg-2 orange">One Column</div>
+				<div class="col-lg-2 orange">One Column</div>
+				<div class="col-lg-2 orange">One Column</div>
+				<div class="col-lg-2 orange">One Column</div>
+				<div class="col-lg-2 orange">One Column</div>
+				<div class="col-lg-2 orange">One Column</div>
+			</div>
+		</div>
 	</div>
 </div>
 
